[project]
name = "flowlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tom Pollak", email = "tompollak1000@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["datasets", "matplotlib", "torch", "tqdm", "transformers", "omegaconf", "wandb"]

[project.optional-dependencies]
gpu = ["bitsandbytes", "accelerate"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
